[project]
name = "lang-stuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-anthropic>=0.3.0",
    "langgraph>=1.1.6",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (unused imports, undefined names)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "UP",     # pyupgrade (modern Python)
    "SIM",    # flake8-simplify (simplify code)
    "TC",     # flake8-type-checking (move imports to TYPE_CHECKING)
]
ignore = [
    "E501",   # line too long (line-length handles this)
    "B008",   # do not perform function calls in arg defaults (FastAPI deps)
    "SIM105", # use contextlib.suppress (often less readable)
    "TC001", "TC002", "TC003",  # type-checking-only imports (prefer explicit)
]

[tool.ruff.lint.isort]
known-first-party = ["health_tracker"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
